@@ -5116,5 +5116,26 @@
       0
     ],
     "price": 500
+  },
+  {
+    "id": 192,
+    "atypeId": 1,
+    "description": "Infused with the essence of the Dark Forest.\nThe wearer recovers 5 HP at the end of every turn.",
+    "etypeId": 6,
+    "traits": [],
+    "iconIndex": 176,
+    "name": "Ring of the Woods",
+    "note": "<Passive State: 173>",
+    "params": [
+      5,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0
+    ],
+    "price": 100
   }
 ]
