@@ -204,7 +204,7 @@
     ],
     "gold": 8,
     "name": "Blue Slime",
-    "note": "<Passive State: 136>\n\n<AI Priority>\nState === On Fire!: Purify\n</AI Priority>\n\n<Enemy Drops>\nBlue Gel: 50%\nRation: 16.67%\nSmall Elixir: 7.5%\nCondensed Blue Gel: 5%\nSlime Scarf: 3.33%\n</Enemy Drops>",
+    "note": "<Passive State: 136>\n\n<AI Priority>\nState === On Fire!: Purify\n</AI Priority>\n\n<Enemy Drops>\nBlue Gel: 50%\nRation: 16.67%\nSmall Elixir: 7.5%\nCondensed Blue Gel: 5%\nRing of the Woods: 5%\nSlime Scarf: 3.33%\n</Enemy Drops>",
     "params": [
       75,
       30,
@@ -313,7 +313,7 @@
     ],
     "gold": 10,
     "name": "Giant Rat",
-    "note": "<Sideview Battler: GiantRat>\n<Scale Sprite: 200%>\n<Attack Animation: 16>\n\n<Enemy Drops>\nTough Pelt: 5%\nRat Claw: 5%\nMetal Wristbraces: 5%\nRat Fur: 50%\nRation: 25%\n</Enemy Drops>",
+    "note": "<Sideview Battler: GiantRat>\n<Scale Sprite: 200%>\n<Attack Animation: 16>\n\n<Enemy Drops>\nTough Pelt: 5%\nRat Claw: 5%\nRing of the Woods: 5%\nMetal Wristbraces: 5%\nRat Fur: 50%\nRation: 25%\n</Enemy Drops>",
     "params": [
       100,
       12,
