@@ -170,7 +170,7 @@ Additions:
    > [REDACTED HELMET]
    > [REDACTED TEAR]
    > [REDACTED WING]
- - Added 103 new equipment items:
+ - Added 104 new equipment items:
   ~ 18 weapons:
    > Steel Hammer
    > Steel Knuckles
@@ -227,8 +227,9 @@ Additions:
    > Glacial Bulwark
    > Resiliant Pelt
    > Shield of the Hero
-  ~ 35 accessories:
+  ~ 36 accessories:
    > Champion's Talisman
+   > Ring of the Woods
    > Soulstealer's Necklace
    > Vigilante's Charm
    > Taut Rope
